<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">iPay</string>
    <string name="copyright" translatable="false">©</string>
    <string name="iPay_system">iPay Systems Ltd.</string>
    <string name="all_rights_reserved">All Rights Reserved. </string>
    <string name="bangladesh">Bangladesh</string>
    <string name="web">Web</string>
    <string name="android">android</string>
    <string name="ios">ios</string>
    <string name="browser">browser</string>
    <string name="mobile_android" translatable="false">mobile-android-</string>
    <string name="no_iPay_account">The user doesn\'t have an iPay account</string>
    <string name="invalid_otp_with_characters">OTP must contain only digits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_new">Enter your password</string>
    <string name="prompt_doing_business_as">Doing Business As</string>
    <string name="prompt_company_name">Company Name (Optional)</string>
    <string name="prompt_business_addr_line2">Address Line 2 (Optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="type_of_business">Type of Business</string>
    <string name="password_hint">Password must contain minimum 8 characters and be alphanumeric. </string>
    <string name="name">Name</string>
    <string name="enter_new_pin">PIN (4 digit)</string>
    <string name="confirm_your_pin">Confirm PIN</string>
    <string name="new_pass">New password</string>
    <string name="confirm_new_pass">Confirm new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="primary_email_address">Primary Email Address</string>
    <string name="other_email_address">Other Email Addresses</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_from_nid">Full Name (Same as your NID)</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="invalid_address_line_1">Please enter Address Line 1</string>
    <string name="select_from_date_first">Please select the from date first</string>
    <string name="select_a_valid_date">Please select a valid date</string>
    <string name="browsers_and_apps"><![CDATA[Browsers & Apps]]></string>
    <string name="same_as_present_address">Same as Present Address</string>
    <string name="introduced_on">Introduced on: </string>
    <string name="invalid_business_name">Enter a business name</string>
    <string name="invalid_business_type">Enter a business type</string>
    <string name="not_set">Not Set</string>
    <string name="thana">Thana</string>
    <string name="invalid_thana">Please select a Thana</string>
    <string name="district">District</string>
    <string name="invalid_district">Please select a District</string>
    <string name="postcode">Postcode</string>
    <string name="invalid_postcode">Please enter a valid 4-digit postcode</string>
    <string name="invalid_passport_ID_insufficient_length">Passport ID should be 9 characters long </string>
    <string name="invalid_passport_ID">Invalid Passport ID</string>
    <string name="invalid_driving_license_ID">Invalid Driving License ID</string>
    <string name="invalid_tin">Invalid Tin</string>
    <string name="invalid_birth_certificate">Invalid Birth Certificate ID</string>
    <string name="invalid_nid_min_length">NID should be at least 10 digits long</string>
    <string name="invalid_nid_max_length">NID should be max 17 digits long</string>
    <string name="invalid_business_tin_wrong_length">Business TIN should be 12 digits long</string>
    <string name="invalid_vat_reg_cert_ID_wrong_length">Vat Registration Certificate ID should be 11 digits long</string>
    <string name="occupation">Occupation</string>
    <string name="organization_name">Organization Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name_mobile_number">Name or Mobile Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contacts_info">iPay will be pleased to discuss any concern or scope of improvement in our Payment Application. Please feel free to contact us.</string>
    <string name="contact_already_exists">Contact already exists</string>
    <string name="business_mobile_number">Business Mobile Number</string>
    <string name="confirm_password_not_matched">Password did not match</string>
    <string name="change_password_success">Password change successful</string>
    <string name="change_password_success_message">Your password is changed successfully. Now you will be logged out from all devices. Please login again to continue.</string>
    <string name="confirm_pin_not_matched">PIN did not match</string>
    <string name="empty_bank_account_list">You have no bank account linked with iPay. Please link a bank to add money in your iPay account.</string>
    <string name="no_bank_account_list">You have no bank account linked with iPay. Please press + button link a bank.</string>
    <string name="empty_transaction_history">No transaction to show right now.</string>
    <string name="empty_ipay_here">No business found near this location.</string>
    <string name="empty_list">Nothing to show right now.</string>
    <string name="not_empty_list_for_password_recovery"> If you forget your password and try to recover it, we will send text messages to the persons in your Trusted Network, you will be asked to enter the codes contained in those messages.</string>
    <string name="empty_list_for_password_recovery">Tap + to add a person to your Trusted Network.\n\nIf you forget your password and try to recover it, we will send text messages to the persons in your Trusted Network.\nYou will be asked to enter the codes contained in those messages.</string>
    <string name="remove_trusted_device_message">Removing device from your trusted device list</string>
    <string name="remove_trusted_person_message">Removing from your trusted network</string>
    <string name="error_invalid_mobile_number">Please enter a valid mobile number</string>
    <string name="error_invalid_pin">PIN must be 4 digit</string>
    <string name="error_invalid_otp">Please enter the OTP sent to your mobile</string>
    <string name="error_invalid_otp_with_required_length">OTP must be 6 digit</string>
    <string name="error_invalid_first_name">Please enter name</string>
    <string name="error_invalid_name">Please enter name</string>
    <string name="business_name_required">Business name is required</string>
    <string name="error_invalid_name_with_required_length">Please enter a valid name of minimum 5 characters</string>
    <string name="error_invalid_birthday">Please enter birthday</string>
    <string name="error_invalid_promo_code">Invalid promo code</string>
    <string name="error_loading_data">Error loading data. Please try again.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="join_us">Join Us</string>
    <string name="enter_the_amount_we_sent">We have sent you a token money to your %1$s account. Please check with your bank and enter the token amount.</string>
    <string name="bank_verification_help">Steps to verify a bank account: \n\nStep 1. iPay will send a small amount of money to your bank account, this may take 3–5 business days. \nStep 2. You have to contact your bank to know the exact amount. \nStep 3. Tap the name of your bank and select Verify. \nStep 4. Enter the exact amount and tap OK. \n\n*Entering an incorrect amount 5 times will permanently block the bank account.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_to_invite">Do you want to invite this person to iPay? By inviting to iPay you acknowledge that you know this person personally.</string>
    <string name="accept">Accept</string>
<string name="this_person">this person</string>
    <string name="are_you_sure_to_remove_bank_account">Are you sure you want to remove this account from your bank list?</string>
    <string name="blocked_bank_message">Sorry, you have taken too many attempts to verify this bank account. Please contact with our customer support for any further queries.</string>
    <string name="cancel_money_request_confirm">Are you sure you want to cancel your request for money?</string>
    <string name="request_payment">Request Payment</string>
    <string name="no_contacts">No Contacts Available</string>
    <string name="no_outlets">No Outlet Found</string>
    <string name="no_verified_contacts">No verified contacts available in your account</string>
    <string name="contacts">Contacts</string>
    <string name="news_room">News Room</string>
    <string name="country">Country</string>
    <string name="set_pin">Set PIN</string>
    <string name="change_password">Change Password</string>
    <string name="gender">Gender</string>
    <string name="reject">Reject</string>
    <string name="remove">Remove</string>
    <string name="make_primary">Make Primary</string>
    <string name="mark_as_spam">Spam</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="service_not_available">Service Currently Not Available</string>
    <string name="contact_support_message">This service is unavailable right now for you. Please contact support for more info.</string>
    <string name="service_unavailable_support_message">This service is unavailable right now for you. Please try again later.</string>
    <string name="instant_money_not_entitled">Your\'re not entitled for instant money.</string>
    <string name="verification_required_message">You need to get verified to access this feature. Please complete the verification process and try again.</string>
    <string name="please_wait_loading">Please wait. Loading…</string>
    <string name="please_wait">Please wait…</string>
    <string name="please_wait_no_ellipsis">Please wait</string>
    <string name="loading">Loading…</string>
    <string name="load_more">Load more…</string>
    <string name="student_id">Student ID</string>
    <string name="already_have_an_account">"Already have an account?"</string>
    <string name="continue_sign_up">Continue</string>
    <string name="address_line_2">Address Line 2 (Optional)</string>
    <string name="log_in">Log In</string>
    <string name="onboard_upload_photo_text">Face the camera straight on, photo must be in focus and not blurry.</string>
    <string name="take_photo">Take Photo</string>
    <string name="continue_button">Continue</string>
    <string name="tour_page_main_text">Shop, Send Money and Pay Bills Anytime, Anywhere.</string>
    <string name="tour_page_sub_string">Pay for your purchases and make personal transactions like sending or requesting money to your friends.</string>
    <string name="create_an_ipay_account">Create an iPay Account</string>
    <string name="log_in_to_my_ipay_account">LOG IN TO MY IPAY ACCOUNT</string>
    <string name="create_business_account">Create Business Account</string>
    <string name="step_2_of_2">Step 2 of 2</string>
    <string name="step_1_of_3">Step 1 of 3</string>
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="take_a_selfie">Take a Selfie</string>
    <string name="you_have_successfully_created_your_ipay_wallet_account">You have successfully created your iPay wallet account.</string>
    <string name="congratulation">Congratulations</string>
</resources>