<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_address_line_1"
        style="@style/CustomTextInputLayoutOutlinedBoxWithMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/address_line_1"
            style="@style/CustomEditTextOutlinedBoxLogInSignUp"
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_address_line_2"
        style="@style/CustomTextInputLayoutOutlinedBoxWithMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/address_line_2"
            style="@style/CustomEditTextOutlinedBoxLogInSignUp"
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <bd.com.ipay.ipayskeleton.CustomView.MaterialEditTextWithProgressBar
        android:id="@+id/district"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/district"
        android:inputType="textPostalAddress"/>

    <bd.com.ipay.ipayskeleton.CustomView.MaterialEditTextWithProgressBar
        android:id="@+id/thana"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/thana"
        android:inputType="textPostalAddress" />

    <android.support.design.widget.TextInputLayout
        style="@style/CustomTextInputLayoutOutlinedBoxWithMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/postcode"
            style="@style/CustomEditTextOutlinedBoxLogInSignUp"
            android:hint="@string/postcode"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/CustomTextInputLayoutOutlinedBoxWithMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/country"
            style="@style/CustomEditTextOutlinedBoxLogInSignUp"
            android:enabled="false"
            android:hint="@string/country"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:text="@string/bangladesh"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>