<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_all_layout_tour"
    tools:context=".Activities.TourActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_margin="@dimen/value32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/colorWhite"
            android:text="@string/tour_page_main_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"
            android:lineSpacingExtra="4sp"
            android:layout_marginTop="@dimen/value20"
            android:text="@string/tour_page_sub_string" />

        <Button
            android:id="@+id/button_join_now"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_ipay_account"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/value32"/>

        <TextView
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:textColor="@color/colorWhite"
            android:text="@string/log_in_to_my_ipay_account"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/value10"/>

    </LinearLayout>

</RelativeLayout>