<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center"
    android:background="@color/colorWhite">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value32"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#de000000"
            android:lineSpacingExtra="12sp"
            android:text="@string/step_2_of_2"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/colorBlack"
            android:lineSpacingExtra="6sp"
            android:text="@string/take_a_selfie" />

        <TextView
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666666"
            android:layout_marginTop="@dimen/value10"
            android:text="@string/onboard_upload_photo_text" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_profile_pic_helper"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/value24"/>

        <Button
            android:id="@+id/open_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonPrimary"
            android:layout_marginTop="32dp"
            android:text="@string/take_photo"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
