<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/value32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#de000000"
            android:lineSpacingExtra="12sp"
            android:text="@string/step_1_of_3"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/colorBlack"
            android:lineSpacingExtra="6sp"
            android:text="@string/create_business_account" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/button_cross"
                android:layout_width="@dimen/value30"
                android:layout_height="@dimen/value30"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/activity_horizontal_margin_card"
                android:padding="@dimen/activity_horizontal_margin_card"
                android:src="@drawable/ic_crossw" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextInputLayoutOutlinedBoxWithMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/business_mobile_number"
                    style="@style/CustomEditTextOutlinedBoxLogInSignUp"
                    android:hint="@string/business_mobile_number"
                    android:inputType="phone"
                    android:maxLines="1" >

                    <requestFocus />

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextInputLayoutOutlinedBoxWithMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    style="@style/CustomEditTextOutlinedBoxLogInSignUp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextInputLayoutOutlinedBoxWithMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:passwordToggleEnabled = "true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    style="@style/CustomEditTextOutlinedBoxLogInSignUp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#61000000"
                android:lineSpacingExtra="4sp"
                android:text="@string/password_hint"
                android:paddingLeft="@dimen/value8"/>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextInputLayoutWithMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/CustomTextInputLayout"
                android:visibility="gone">

                <EditText
                    android:id="@+id/confirm_password"
                    style="@style/CustomEditTextLogInSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_small_medium" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/business_next_button"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/continue_sign_up" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin_card">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="@dimen/value2"
                android:text="@string/already_have_an_account"
                android:textColor="#212121"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="start|center_vertical"
                android:minWidth="@dimen/value0"
                android:minHeight="@dimen/value0"
                android:paddingLeft="@dimen/activity_horizontal_margin_card"
                android:paddingTop="@dimen/activity_horizontal_margin_card"
                android:paddingRight="@dimen/activity_horizontal_margin_card"
                android:paddingBottom="@dimen/activity_horizontal_margin_card"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>