<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/value32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#de000000"
            android:lineSpacingExtra="12sp"
            android:text="@string/step_2_of_3"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/colorBlack"
            android:lineSpacingExtra="6sp"
            android:text="@string/create_business_account" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextInputLayoutOutlinedBoxWithMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/business_name"
                    style="@style/CustomEditTextOutlinedBoxLogInSignUp"
                    android:hint="@string/prompt_doing_business_as"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ" >

                    <requestFocus />

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextInputLayoutOutlinedBoxWithMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/company_name"
                    style="@style/CustomEditTextOutlinedBoxLogInSignUp"
                    android:hint="@string/prompt_company_name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextInputLayoutOutlinedBoxWithMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/business_type"
                    style="@style/CustomEditTextOutlinedBoxLogInSignUp"
                    android:focusable="false"
                    android:hint="@string/type_of_business"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <bd.com.ipay.ipayskeleton.CustomView.AddressInputSignUpView
                android:id="@+id/business_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/business_again_next_button"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/continue_sign_up" />

    </LinearLayout>
</ScrollView>
